--- a/python/sample_generator.ipynb
+++ b/python/sample_generator.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-29 22:10:10.403 Python[2986:2687008] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2024-11-29 22:10:10.403 Python[2986:2687008] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -36,9 +45,9 @@
     "\n",
     "    for (x, y, w, h) in faces:\n",
     "        sample_count += 1\n",
-    "        face = frame[y:y+h, x:x+w]\n",
+    "        face_region = frame[y:y+h, x:x+w]\n",
     "        face_filename = os.path.join(sample_dir, f'{username}_{sample_count}.jpg')\n",
-    "        cv2.imwrite(face_filename, face)\n",
+    "        cv2.imwrite(face_filename, face_region)\n",
     "        cv2.rectangle(frame, (x, y), (x+w, y+h), (255, 0, 0), 2)\n",
     "\n",
     "    cv2.imshow('Face Sample Capture', frame)\n",
